Changed SDK to support Java 8 (#80)
* Changed SDK to support Java 8

* Added Java8 to test runtimes

* Dotenv downgrade to support Java8

* Remove HttpRequest from services and instead provide token directly

* Remove Runtime.version

* Map.of and List.of

* List.copy

* Mockito version

* JUnit Pioneer

* No String.repeat