@@ -27,14 +27,18 @@ import static org.mockito.Mockito.when;
 import com.descope.enums.DeliveryMethod;
 import com.descope.exception.RateLimitExceededException;
 import com.descope.exception.ServerCommonException;
+import com.descope.model.auth.AuthParams;
 import com.descope.model.auth.AuthenticationInfo;
+import com.descope.model.client.Client;
 import com.descope.model.jwt.Provider;
 import com.descope.model.jwt.Token;
 import com.descope.model.jwt.response.SigningKeysResponse;
 import com.descope.model.magiclink.response.MaskedEmailRes;
 import com.descope.model.magiclink.response.MaskedPhoneRes;
+import com.descope.model.mgmt.ManagementParams;
 import com.descope.model.user.User;
 import com.descope.model.user.request.UserRequest;
+import com.descope.model.user.response.MagicLinkTestUserResponse;
 import com.descope.model.user.response.UserResponse;
 import com.descope.proxy.ApiProxy;
 import com.descope.proxy.impl.ApiProxyBuilder;
@@ -45,7 +49,9 @@ import com.descope.sdk.mgmt.impl.ManagementServiceBuilder;
 import com.descope.utils.JwtUtils;
 import com.descope.utils.UriUtils;
 import java.security.Key;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -59,11 +65,11 @@ class MagicLinkServiceImplTest {
 
   @BeforeEach
   void setUp() {
-    var authParams = TestUtils.getAuthParams();
-    var client = TestUtils.getClient();
+    AuthParams authParams = TestUtils.getAuthParams();
+    Client client = TestUtils.getClient();
     this.magicLinkService =
         AuthenticationServiceBuilder.buildServices(client, authParams).getMagicLinkService();
-    var mgmtParams = TestUtils.getManagementParams();
+    ManagementParams mgmtParams = TestUtils.getManagementParams();
     this.userService = ManagementServiceBuilder.buildServices(client, mgmtParams).getUserService();
   }
 
@@ -71,8 +77,8 @@ class MagicLinkServiceImplTest {
   void signUp() {
     User user = new User("someUserName", MOCK_EMAIL, "+910000000000");
 
-    var apiProxy = mock(ApiProxy.class);
-    var maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
+    ApiProxy apiProxy = mock(ApiProxy.class);
+    MaskedEmailRes maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
     doReturn(maskedEmailRes).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -85,12 +91,12 @@ class MagicLinkServiceImplTest {
   @SneakyThrows
   @Test
   void testVerify() {
-    var apiProxy = mock(ApiProxy.class);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(MOCK_JWT_RESPONSE).when(apiProxy).post(any(), any(), any());
-    doReturn(new SigningKeysResponse(List.of(MOCK_SIGNING_KEY)))
+    doReturn(new SigningKeysResponse(Arrays.asList(MOCK_SIGNING_KEY)))
       .when(apiProxy).get(any(), eq(SigningKeysResponse.class));
 
-    var provider = mock(Provider.class);
+    Provider provider = mock(Provider.class);
     when(provider.getProvidedKey()).thenReturn(mock(Key.class));
 
     AuthenticationInfo authenticationInfo;
@@ -126,8 +132,8 @@ class MagicLinkServiceImplTest {
 
   @Test
   void signIn() {
-    var apiProxy = mock(ApiProxy.class);
-    var maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
+    ApiProxy apiProxy = mock(ApiProxy.class);
+    MaskedEmailRes maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
     doReturn(maskedEmailRes).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -140,8 +146,8 @@ class MagicLinkServiceImplTest {
 
   @Test
   void testSignUpOrInForSuccess() {
-    var apiProxy = mock(ApiProxy.class);
-    var maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
+    ApiProxy apiProxy = mock(ApiProxy.class);
+    MaskedEmailRes maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
     doReturn(maskedEmailRes).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -213,8 +219,8 @@ class MagicLinkServiceImplTest {
 
   @Test
   void testUpdateUserEmailForSuccess() {
-    var apiProxy = mock(ApiProxy.class);
-    var maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
+    ApiProxy apiProxy = mock(ApiProxy.class);
+    MaskedEmailRes maskedEmailRes = new MaskedEmailRes(MOCK_MASKED_EMAIL);
     doReturn(maskedEmailRes).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -275,8 +281,8 @@ class MagicLinkServiceImplTest {
 
   @Test
   void testUpdateUserPhoneForSuccess() {
-    var apiProxy = mock(ApiProxy.class);
-    var maskedEmailRes = new MaskedPhoneRes(MOCK_MASKED_PHONE);
+    ApiProxy apiProxy = mock(ApiProxy.class);
+    MaskedPhoneRes maskedEmailRes = new MaskedPhoneRes(MOCK_MASKED_PHONE);
     doReturn(maskedEmailRes).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -293,11 +299,12 @@ class MagicLinkServiceImplTest {
     String loginId = TestUtils.getRandomName("u-");
     userService.createTestUser(
         loginId, UserRequest.builder().email(loginId + "@descope.com").build());
-    var response = userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.EMAIL);
+    MagicLinkTestUserResponse response =
+        userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.EMAIL);
     assertThat(response.getLink()).isNotBlank();
-    var params = UriUtils.splitQuery("https://kuku.com" + response.getLink());
+    Map<String, List<String>> params = UriUtils.splitQuery("https://kuku.com" + response.getLink());
     assertThat(params.get("t").size()).isEqualTo(1);
-    var authInfo = magicLinkService.verify(params.get("t").get(0));
+    AuthenticationInfo authInfo = magicLinkService.verify(params.get("t").get(0));
     assertNotNull(authInfo.getToken());
     assertThat(authInfo.getToken().getJwt()).isNotBlank();
     userService.delete(loginId);
@@ -308,14 +315,16 @@ class MagicLinkServiceImplTest {
     String loginId = TestUtils.getRandomName("u-");
     userService.createTestUser(
         loginId, UserRequest.builder().email(loginId + "@descope.com").build());
-    var response = userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.EMAIL);
+    MagicLinkTestUserResponse response =
+        userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.EMAIL);
     assertThat(response.getLink()).isNotBlank();
-    var params = UriUtils.splitQuery("https://kuku.com" + response.getLink());
+    Map<String, List<String>> params = UriUtils.splitQuery("https://kuku.com" + response.getLink());
     assertThat(params.get("t").size()).isEqualTo(1);
-    var authInfo = magicLinkService.verify(params.get("t").get(0));
+    AuthenticationInfo authInfo = magicLinkService.verify(params.get("t").get(0));
     assertNotNull(authInfo.getToken());
     assertThat(authInfo.getToken().getJwt()).isNotBlank();
-    var response2 = userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.EMAIL);
+    MagicLinkTestUserResponse response2 =
+        userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.EMAIL);
     assertThat(response2.getLink()).isNotBlank();
     magicLinkService.updateUserEmail(
         loginId, loginId + "1@descope.com", MOCK_URL, authInfo.getRefreshToken().getJwt(), null);
@@ -332,14 +341,16 @@ class MagicLinkServiceImplTest {
     String loginId = TestUtils.getRandomName("u-");
     userService.createTestUser(
         loginId, UserRequest.builder().phone(MOCK_PHONE).verifiedPhone(true).build());
-    var response = userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.SMS);
+    MagicLinkTestUserResponse response =
+        userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.SMS);
     assertThat(response.getLink()).isNotBlank();
-    var params = UriUtils.splitQuery("https://kuku.com" + response.getLink());
+    Map<String, List<String>> params = UriUtils.splitQuery("https://kuku.com" + response.getLink());
     assertThat(params.get("t").size()).isEqualTo(1);
-    var authInfo = magicLinkService.verify(params.get("t").get(0));
+    AuthenticationInfo authInfo = magicLinkService.verify(params.get("t").get(0));
     assertNotNull(authInfo.getToken());
     assertThat(authInfo.getToken().getJwt()).isNotBlank();
-    var response2 = userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.SMS);
+    MagicLinkTestUserResponse response2 =
+        userService.generateMagicLinkForTestUser(loginId, MOCK_URL, DeliveryMethod.SMS);
     assertThat(response2.getLink()).isNotBlank();
     magicLinkService.updateUserPhone(
         DeliveryMethod.SMS, loginId, "+1-555-555-5556", MOCK_URL, authInfo.getRefreshToken().getJwt(), null);
