@@ -14,6 +14,8 @@ import static org.mockito.Mockito.verify;
 
 import com.descope.exception.RateLimitExceededException;
 import com.descope.exception.ServerCommonException;
+import com.descope.model.client.Client;
+import com.descope.model.mgmt.ManagementParams;
 import com.descope.model.tenant.Tenant;
 import com.descope.model.tenant.request.TenantSearchRequest;
 import com.descope.model.tenant.response.GetAllTenantsResponse;
@@ -21,6 +23,7 @@ import com.descope.proxy.ApiProxy;
 import com.descope.proxy.impl.ApiProxyBuilder;
 import com.descope.sdk.TestUtils;
 import com.descope.sdk.mgmt.TenantService;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -29,7 +32,7 @@ import org.mockito.MockedStatic;
 
 public class TenantServiceImplTest {
 
-  private final List<String> selfProvisioningDomains = List.of("domain1", "domain2");
+  private final List<String> selfProvisioningDomains = Arrays.asList("domain1", "domain2");
   Tenant mockTenant = Tenant.builder()
       .id("id")
       .name("name")
@@ -40,8 +43,8 @@ public class TenantServiceImplTest {
 
   @BeforeEach
   void setUp() {
-    var authParams = TestUtils.getManagementParams();
-    var client = TestUtils.getClient();
+    ManagementParams authParams = TestUtils.getManagementParams();
+    Client client = TestUtils.getClient();
     this.tenantService = ManagementServiceBuilder.buildServices(client, authParams).getTenantService();
   }
 
@@ -55,12 +58,12 @@ public class TenantServiceImplTest {
 
   @Test
   void testCreateSuccess() {
-    var apiProxy = mock(ApiProxy.class);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(mockTenant).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
           () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      var response = tenantService.create("someName", selfProvisioningDomains);
+      String response = tenantService.create("someName", selfProvisioningDomains);
       assertThat(response).isEqualTo("id");
     }
   }
@@ -76,7 +79,7 @@ public class TenantServiceImplTest {
 
   @Test
   void testCreateWithIdForSuccess() {
-    var apiProxy = mock(ApiProxy.class);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(mockTenant).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -97,7 +100,7 @@ public class TenantServiceImplTest {
 
   @Test
   void testUpdateForSuccess() {
-    var apiProxy = mock(ApiProxy.class);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(mockTenant).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -116,7 +119,7 @@ public class TenantServiceImplTest {
 
   @Test
   void testDeleteForSuccess() {
-    var apiProxy = mock(ApiProxy.class);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(mockTenant).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
@@ -128,13 +131,14 @@ public class TenantServiceImplTest {
 
   @Test
   void testLoadAllForSuccess() {
-    var mockTenantsResponse = GetAllTenantsResponse.builder().tenants(List.of(mockTenant)).build();
-    var apiProxy = mock(ApiProxy.class);
+    GetAllTenantsResponse mockTenantsResponse =
+        GetAllTenantsResponse.builder().tenants(Arrays.asList(mockTenant)).build();
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(mockTenantsResponse).when(apiProxy).get(any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
           () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      var response = tenantService.loadAll();
+      List<Tenant> response = tenantService.loadAll();
       assertThat(response.size()).isEqualTo(1);
     }
   }
@@ -142,12 +146,12 @@ public class TenantServiceImplTest {
   @RetryingTest(value = 3, suspendForMs = 30000, onExceptions = RateLimitExceededException.class)
   void testFunctionalFullCycle() {
     String name = TestUtils.getRandomName("t-");
-    String tenantId = tenantService.create(name, List.of(name + ".com", name + "1.com"));
+    String tenantId = tenantService.create(name, Arrays.asList(name + ".com", name + "1.com"));
     assertThat(tenantId).isNotBlank();
-    var tenants = tenantService.loadAll();
+    List<Tenant> tenants = tenantService.loadAll();
     assertThat(tenants).isNotEmpty();
     boolean found = false;
-    for (var t : tenants) {
+    for (Tenant t : tenants) {
       if (t.getId().equals(tenantId)) {
         found = true;
         assertEquals(name, t.getName());
@@ -155,11 +159,11 @@ public class TenantServiceImplTest {
       }
     }
     assertTrue(found);
-    tenantService.update(tenantId, name + "1", List.of(name + ".com"), null);
+    tenantService.update(tenantId, name + "1", Arrays.asList(name + ".com"), null);
     tenants = tenantService.loadAll();
     assertThat(tenants).isNotEmpty();
     found = false;
-    for (var t : tenants) {
+    for (Tenant t : tenants) {
       if (t.getId().equals(tenantId)) {
         found = true;
         assertEquals(name + "1", t.getName());
@@ -167,18 +171,18 @@ public class TenantServiceImplTest {
       }
     }
 
-    var tenantSearchRequest = TenantSearchRequest.builder().names(List.of(name + "1")).build();
+    TenantSearchRequest tenantSearchRequest = TenantSearchRequest.builder().names(Arrays.asList(name + "1")).build();
     tenants = tenantService.searchAll(tenantSearchRequest);
     assertThat(tenants).isNotEmpty();
     found = false;
-    for (var t : tenants) {
+    for (Tenant t : tenants) {
       if (t.getId().equals(tenantId)) {
         found = true;
         assertEquals(name + "1", t.getName());
       }
     }
 
-    tenantSearchRequest = TenantSearchRequest.builder().names(List.of("doesnotexists")).build();
+    tenantSearchRequest = TenantSearchRequest.builder().names(Arrays.asList("doesnotexists")).build();
     tenants = tenantService.searchAll(tenantSearchRequest);
     assertThat(tenants).isEmpty();
     tenantService.delete(tenantId);
